spell check on About section

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         </div>
         <div class="col-right">
           <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
-          <h2>Font End Web Developer</h2>
+          <h2>Front End Web Developer</h2>
           <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
             International School of South Africa. <br><br>
@@ -523,7 +523,7 @@
             I'm currently studying towards MERN stack competancy as I've taken to javascript as my learning and foundational programming language. 
             <br><br> As I progress in JS and development as a whole I then intend on 
             learning other development stacks, most notably Python back end scripting and programming.
-            <br><br>As of 2021 I'm working towrds establishing myself in the industry and gaining the necessary exprience and compentancies to make an effective web developer.
+            <br><br>As of 2021 I'm working towrds establishing myself in the industry and gaining the necessary exprience and compentencies to make an effective web developer.
           </p>
             <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
           
