skills section spell check

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <img src="icons/icons8-react-native-64.png" alt="icon" />
                 </div>
                 <h2>React JS</h2>
-                <p>No personal projects yet.. in progress</p>
+                <p>... in progress</p>
               </div>
 
               <div class="skills-item">
