new skills items

--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
                   <li>Node Package Manager</li>
                 </ul>
               </div>
-
               <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-react-native-64.png" alt="icon" />
@@ -145,7 +144,7 @@
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-database-restore-64.png" alt="icon" />
+                  <img src="icons/icons8-mongodb-48.png" alt="icon" />
                 </div>
                 <h2>MongoDB</h2>
                 <ul>
@@ -156,24 +155,33 @@
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-code-fork-64.png" alt="icon" />
+                  <img src="icons/icons8-compare-git-64.png"  alt="icon" />
                 </div>
-                <h2>Version Control</h2>
-                <ul>
-                  <li>Git</li>
-                  <li>GitHub</li>
-                </ul>
+                <h2>Git</h2>
+                <p>
+                  Version tracking
+                </p>
               </div>
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-cloud-64.png" alt="icon" />
+                  <img id="github-icon" src="icons/github.jpg" alt="icon" />
                 </div>
-                <h2>Web Hosting</h2>
-                <ul>
-                  <li>Heroku</li>
-                  <li>Netlify</li>
-                </ul>
+                <h2>gitHub</h2>
+                <p>
+                  Version control
+                </p>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-json-64.png" alt="icon" />
+                </div>
+                <h2>JSon</h2>
+                <p>
+                  Javascript Object Notation
+                
+                </p>
               </div>
 
               <div class="skills-item">
@@ -185,6 +193,27 @@
                   Compensation Fund, Department of Labour.
                 </p>
               </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-heroku-64.png" alt="icon" />
+                </div>
+                <h2>Heroku</h2>
+                <p>
+                  Web Applications
+                </p>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-cloud-64.png" alt="icon" />
+                </div>
+                <h2>Netlify</h2>
+                <p>
+                  Webpage hosting
+                </p>
+              </div>
+
             </div>
           </div>
         </div>
