github icon and description

--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@
                 </div>
                 <h2>Git</h2>
                 <p>
-                  Version tracking
+                  Version control
                 </p>
               </div>
 
               <div class="skills-item">
-                <div class="icon">
-                  <img id="github-icon" src="icons/github.jpg" alt="icon" />
+                <div id="github-icon" class="icon">
+                  <img  src="icons/github.jpg" alt="icon" />
                 </div>
-                <h2>gitHub</h2>
+                <h2>GitHub</h2>
                 <p>
-                  Version control
+                  Repository management
                 </p>
               </div>
 
