capitilize skills item

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <h2>Git</h2>
                 <p>
-                  Version control
+                  Version Control
                 </p>
               </div>
 
@@ -169,7 +169,7 @@
                 </div>
                 <h2>GitHub</h2>
                 <p>
-                  Repository management
+                  Repository Management
                 </p>
               </div>
 
@@ -180,7 +180,6 @@
                 <h2>JSon</h2>
                 <p>
                   Javascript Object Notation
-                
                 </p>
               </div>
 
