--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
               </div>
 
               <div class="skills-item">
-                <div class="icon">
-                  <img src="icons/icons8-compare-git-64.png"  alt="icon" />
+                <div id="git-icon" class="icon">
+                  <img src="icons/git.png"  alt="icon" />
                 </div>
                 <h2>Git</h2>
                 <p>
