added Sass to skils items

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <ul>
                   <li>Basic Algorithim Scripting</li>
                   <li>ES6 Fundementals.</li>
+                  <li>JSon</li>
                 </ul>
                 <p> </p>
               </div>
@@ -175,11 +176,11 @@
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-json-64.png" alt="icon" />
+                  <img src="icons/icons8-sass-avatar-48.png" alt="icon" />
                 </div>
-                <h2>JSon</h2>
+                <h2>Sass</h2>
                 <p>
-                  Javascript Object Notation
+                  Syntactically Awesome Style Sheets
                 </p>
               </div>
 
