--- a/index.html
+++ b/index.html
@@ -183,17 +183,6 @@
                 </p>
               </div>
 
-              
-              <div class="skills-item">
-                <div class="icon">
-                  <img src="icons/icons8-customer-insight-64.png" alt="icon" />
-                </div>
-                <h2>Customer Care</h2>
-                <p>
-                  Compensation Fund, Department of Labour.
-                </p>
-              </div>
-
               <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-heroku-64.png" alt="icon" />
@@ -205,12 +194,22 @@
               </div>
 
               <div class="skills-item">
-                <div class="icon">
-                  <img src="icons/icons8-cloud-64.png" alt="icon" />
+                <div id="netlify-icon" class="icon">
+                  <img src="icons/netlify.png" alt="icon" />
                 </div>
                 <h2>Netlify</h2>
                 <p>
                   Webpage hosting
+                </p>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-customer-insight-64.png" alt="icon" />
+                </div>
+                <h2>Customer Care</h2>
+                <p>
+                  Compensation Fund, Department of Labour.
                 </p>
               </div>
 
