skills items spell check

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <h2>Heroku</h2>
                 <p>
-                  Web Applications
+                  Cloud Application Platform
                 </p>
               </div>
 
@@ -199,7 +199,7 @@
                 </div>
                 <h2>Netlify</h2>
                 <p>
-                  Webpage hosting
+                  Web applications and static websites hosting.
                 </p>
               </div>
 
