added ul lists to selected skills items

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                   <img src="icons/git.png"  alt="icon" />
                 </div>
                 <h2>Git</h2>
-                <p>
-                  Version Control
-                </p>
+                <ul>
+                  <li>Version Control</li>
+                </ul>
               </div>
 
               <div class="skills-item">
@@ -178,9 +178,9 @@
                   <img  src="icons/github.jpg" alt="icon" />
                 </div>
                 <h2>GitHub</h2>
-                <p>
-                  Repository Management
-                </p>
+                <ul>
+                  <li>Repository Management</li>
+                </ul>
               </div>
 
               <div class="skills-item">
@@ -188,9 +188,9 @@
                   <img src="icons/icons8-heroku-64.png" alt="icon" />
                 </div>
                 <h2>Heroku</h2>
-                <p>
-                  Cloud Application Platform
-                </p>
+                <ul>
+                  <li>Cloud Applications</li>
+                </ul>
               </div>
 
               <div class="skills-item">
@@ -198,9 +198,10 @@
                   <img src="icons/netlify.png" alt="icon" />
                 </div>
                 <h2>Netlify</h2>
-                <p>
-                  Web applications and static websites hosting.
-                </p>
+                <ul>
+                  <li>Static websites</li>
+                  <li>Web applications</li>
+                </ul>
               </div>
 
               <div class="skills-item">
