rearranged skills items and edited the skills info

--- a/index.html
+++ b/index.html
@@ -113,16 +113,6 @@
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-sass-avatar-48.png" alt="icon" />
-                </div>
-                <h2>Sass</h2>
-                <p>
-                  Syntactically Awesome Style Sheets
-                </p>
-              </div>
-
-              <div class="skills-item">
-                <div class="icon">
                   <img src="icons/icons8-javascript-64.png" alt="icon" />
                 </div>
                 <h2>Javascript</h2>
@@ -144,14 +134,17 @@
                   <li>Node Package Manager</li>
                 </ul>
               </div>
+
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-react-native-64.png" alt="icon" />
+                  <img src="icons/icons8-sass-avatar-48.png" alt="icon" />
                 </div>
-                <h2>React JS</h2>
-                <p>... in progress</p>
+                <h2>Sass</h2>
+                <p>
+                  Syntactically Awesome Style Sheets
+                </p>
               </div>
-
+  
               <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-mongodb-48.png" alt="icon" />
@@ -160,6 +153,27 @@
                 <ul>
                   <li>Mongoose</li>
                   <li>Postman</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-react-native-64.png" alt="icon" />
+                </div>
+                <h2>React JS</h2>
+                <ul>
+                  <li>Reactstrap</li>
+                  <li>Material-UI</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-redux-48.png" alt="icon" />
+                </div>
+                <h2>Redux</h2>
+                <ul>
+                  <li>Basic Redux Store Management</li>
                 </ul>
               </div>
 
@@ -175,7 +189,7 @@
 
               <div class="skills-item">
                 <div id="github-icon" class="icon">
-                  <img  src="icons/github.jpg" alt="icon" />
+                  <img  src="icons/icons8-github-64.png" alt="icon" />
                 </div>
                 <h2>GitHub</h2>
                 <ul>
@@ -183,7 +197,7 @@
                 </ul>
               </div>
 
-              <div class="skills-item">
+            <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-heroku-64.png" alt="icon" />
                 </div>
@@ -209,9 +223,11 @@
                   <img src="icons/icons8-customer-insight-64.png" alt="icon" />
                 </div>
                 <h2>Customer Care</h2>
-                <p>
-                  Compensation Fund, Department of Labour.
-                </p>
+                <ul>
+                  <li>Client liasson</li>
+                  <li>Quality Control Standards Compliance</li>
+                  <li>Team worker</li>
+                </ul>
               </div>
 
             </div>
