--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
               <div class="skills-item">
                 <div class="icon">
-                  <img src="icons/icons8-redux-48.png" alt="icon" />
+                  <img src="icons/redux.png" alt="icon" />
                 </div>
                 <h2>Redux</h2>
                 <ul>
