--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                 <h2>CSS</h2>
                 <ul>
                   <li>Animations</li>
-                  <li>Bootstrap</li>
                   <li>Responsive Web Design</li>
                 </ul>
               </div>
@@ -130,8 +129,17 @@
                 </div>
                 <h2>Node JS</h2>
                 <ul>
-                  <li>Express JS</li>
                   <li>Node Package Manager</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-bootstrap-48.png" alt="icon" />
+                </div>
+                <h2>Bootsrap</h2>
+                <ul>
+                  <li>Front End CSS Framework</li>
                 </ul>
               </div>
 
@@ -140,22 +148,11 @@
                   <img src="icons/icons8-sass-avatar-48.png" alt="icon" />
                 </div>
                 <h2>Sass</h2>
-                <p>
-                  Syntactically Awesome Style Sheets
-                </p>
-              </div>
-  
-              <div class="skills-item">
-                <div class="icon">
-                  <img src="icons/icons8-mongodb-48.png" alt="icon" />
-                </div>
-                <h2>MongoDB</h2>
                 <ul>
-                  <li>Mongoose</li>
-                  <li>Postman</li>
+                  <li>Syntactically Awesome Style Sheets</li>
                 </ul>
               </div>
-
+  
               <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-react-native-64.png" alt="icon" />
@@ -173,7 +170,28 @@
                 </div>
                 <h2>Redux</h2>
                 <ul>
-                  <li>Basic Redux Store Management</li>
+                  <li>Basic Store Management</li>
+                </ul>
+              </div>
+             
+              <div class="skills-item">
+                <div id="express-icon" class="icon">
+                  <img src="icons/icons8-node-js-32.png" alt="icon" />
+                </div>
+                <h2>Express JS</h2>
+                <ul>
+                  <li>Basic Routing</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-mongodb-48.png" alt="icon" />
+                </div>
+                <h2>MongoDB</h2>
+                <ul>
+                  <li>Mongoose</li>
+                  <li>Postman</li>
                 </ul>
               </div>
 
