flexbox to css skils item

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <h2>CSS</h2>
                 <ul>
                   <li>Animations</li>
+                  <li>Flexbox</li>
                   <li>Responsive Web Design</li>
                 </ul>
               </div>
