contact section fixed attachment

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
     <!--Contact Section-->
     <section id="contact">
       <div class="contact container">
-        <div>
+        <div class="contact-header">
           <h1 data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
         </div>
         <div class="contact-items">
