removed padding from #skills

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 
     <section id="skills">
       <div class="skills container">
-        <div class="skills-top">
+        <div class="skills-header">
           <h1 data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
+        </div>
+        <div class="skills-top">
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to
             progress into a Full Stack Web Developer.
