dropdown background position left

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 </div>
                 <h2>Sass</h2>
                 <ul>
-                  <li>Syntactically Awesome Style Sheets</li>
+                  <li>Nested Rules</li>
+                  <li>Mxins and Functions</li>
                 </ul>
               </div>
   
@@ -163,7 +164,7 @@
                 <h2>React JS</h2>
                 <ul>
                   <li>Reactstrap</li>
-                  <li>Material-UI</li>
+                  <li>React Fundentals</li>
                 </ul>
               </div>
 
