skills dropdown backround attachment and padding adjustments

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="skills-top">
           <p>
-            I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to
+            I'm a Front End Developer with a keen interest in Responsive Web Design and an aspiration to
             progress into a Full Stack Web Developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools,
             Traversey Media and Udemy.
@@ -120,7 +120,7 @@
                 <h2>Javascript</h2>
                 <ul>
                   <li>Basic Algorithim Scripting</li>
-                  <li>ES6 Fundementals.</li>
+                  <li>Basic ES6 Fundementals.</li>
                   <li>JSon</li>
                 </ul>
                 <p> </p>
@@ -135,7 +135,6 @@
                   <li>Node Package Manager</li>
                 </ul>
               </div>
-
               <div class="skills-item">
                 <div class="icon">
                   <img src="icons/icons8-bootstrap-48.png" alt="icon" />
