--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="skills-top">
           <p>
-            I'm a Front End Developer with a keen interest in Responsive Web Design and an aspiration to
+            I'm a self taught Front End Developer with a keen interest in Responsive Web Design and an aspiration to
             progress into a Full Stack Web Developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools,
             Traversey Media and Udemy.
