spell check on skills items

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h2>Javascript</h2>
                 <ul>
                   <li>Basic Algorithim Scripting</li>
-                  <li>Basic ES6 Fundementals.</li>
+                  <li>ES6 Fundementals.</li>
                   <li>JSon</li>
                 </ul>
                 <p> </p>
@@ -163,7 +163,7 @@
                 <h2>React JS</h2>
                 <ul>
                   <li>Reactstrap</li>
-                  <li>React Fundentals</li>
+                  <li>React Fundementals</li>
                 </ul>
               </div>
 
