testing new about & contact background attachment

--- a/index.html
+++ b/index.html
@@ -573,7 +573,9 @@
           </div>
         </div>
         <div class="col-right">
-          <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
+          <div class="about-header">
+            <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
+          </div>
           <h2>Front End Web Developer</h2>
           <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
