--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             I'm a self taught Front End Developer with a keen interest in Responsive Web Design and an aspiration to
             progress into a Full Stack Web Developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools,
-            Traversey Media and Udemy.
+            Traversey Media and Udemy. <br>
             View my full skill set in the dropdown section below.
           </p>
         </div>
