skills and roject sections padding adjustments/test

--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
         </div>
         <div class="skills-top">
           <p>
-            I'm a self taught Front End Developer with a keen interest in Responsive Web Design and an aspiration to
-            progress into a Full Stack Web Developer.
-            My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools,
-            Traversey Media and Udemy. <br>
-            View my full skill set in the dropdown section below.
+            I'm a self taught Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
+            My skill set is built up from various online platforms such as Coursera, W3schools,
+            Traversey Media, Udemy and most notably Free-Code-Camp where I obtained a certificate in Responsive Web Design. 
+            <br><br>View my full skill set in the dropdown section below.
           </p>
         </div>
         <!--Dropdown-->
