--- a/index.html
+++ b/index.html
@@ -325,6 +325,27 @@
               <img src="img/survey.bmp" alt="img" />
             </div>
           </div>
+
+          <div class="project-item">
+            <div class="project-tile">
+              <h1>Valoir &trade;</h1>
+              <a href="https://shakexsempe.github.io/parallex-scrolling-effect/" target="_blank">
+                <h2>CSS 3 Tutorial </h2>
+                <p>
+                  CSS Parallax scrolling effect project
+                </p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Sass</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img src="img/valoir.bmp" alt="img" />
+            </div>
+          </div>
+
           <div class="project-item">
             <div class="project-tile">
               <h1>Product Landing Page</h1>
@@ -517,29 +538,8 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>React [tutorial]</h1>
-              <a href="https://unruffled-darwin-7a9a4f.netlify.app/" target="_blank">
-                <h2>Full React Course 2020</h2>
-                <p>
-                  React Fundementals presented by John Smilga. <br>
-                  App hosted on Netlify
-                </p>
-              </a>
-              <ul class="tech-list">
-                <li>React</li>
-                <li>NPM</li>
-                <li>Netlify</li>
-              </ul>
-            </div>
-            <div class="project-img">
-              <img src="img/react.bmp" alt="img" />
-            </div>
-          </div>
-
-          <div class="project-item">
-            <div class="project-tile">
               <h1>React Random Quote Machine</h1>
-              <a href="https://react-fundementals-tutorial-2021.netlify.app/" target="_blank">
+              <a href="https://unruffled-darwin-7a9a4f.netlify.app/" target="_blank">
                 <h2>FreeCodeCamp Front End Libraries Project #1</h2>
                 <p>
                   React Random quote Generator presented by Aryan Jabbari. <br>
