--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <ul>
                   <li>Animations</li>
                   <li>Flexbox</li>
+                  <li>Grid Layout</li>
                   <li>Responsive Web Design</li>
                 </ul>
               </div>
