sass skills item li

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                 <ul>
                   <li>Nested Rules</li>
                   <li>Mxins and Functions</li>
+                  <li>_Partials</li>
                 </ul>
               </div>
   
