about p spell check

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
           <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
             International School of South Africa. <br><br>
-            Before becoming a self-taught Web Developer, I was a Customer Care agent at the Compensation Fund
+            Before becoming a Front End Web Developer, I was a Customer Care agent at the Compensation Fund
             (Department of Labour).
             I started learning to code in 2019 having previously enrolled in an Introduction of IT Fundamentals course
             via Coursera and then most recently <a
