implemented nav-link scroll

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             <div class="hamburger">
               <div class="bar"></div>
             </div>
-            <ul>
-              <li><a href="#" data-after="Home">Home</a></li>
-              <li><a href="#skills" data-after="skills">Skills</a></li>
-              <li><a href="#projects" data-after="Projects">Projects</a></li>
-              <li><a href="#about" data-after="About">About</a></li>
-              <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <div class="links-container">
+            <ul class="links">
+              <li><a href="#welcome-section" data-after="Home" class="scroll-link">Home</a></li>
+              <li><a href="#skills" data-after="skills" class="scroll-link">Skills</a></li>
+              <li><a href="#projects" data-after="Projects" class="scroll-link">Projects</a></li>
+              <li><a href="#about" data-after="About" class="scroll-link">About</a></li>
+              <li><a href="#contact" data-after="Contact"class="scroll-link">Contact</a></li>
             </ul>
+          </div>
           </div>
         </nav>
       </div>
