github icon profile link

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
         
         <div class="all-projects">
-          <a target="_blank" href="https://github.com/ShakexSempe" id="profile-link">Git Hub</a>
+          <a target="_blank" href="https://github.com/ShakexSempe" id="profile-link"> <i class="fab fa-github"></i> Git Hub</a>
 
 
           <div class="project-item">
