sjow-link button transition

--- a/index.html
+++ b/index.html
@@ -592,11 +592,10 @@
             href="https://www.freecodecamp.org/boitumelo-sempe"
             target="_blank" class="fcc-link">FreeCodeCamp</a>. 
             <br><br>
-            As an aspiring and relatively inexperinced developer my current object to is to master the HTML 5 fundematals to a professional proficiency and as I gain experince in the industry progress on to a full stack developer.
-            I'm currently studying towards MERN stack competancy as I've taken to javascript as my learning and foundational programming language. 
+            I'm currently studying towards MERN stack competancy as I've taken to javascript as my foundational programming language. 
             <br><br> As I progress in JS and development as a whole I then intend on 
-            learning other development stacks, most notably Python back end scripting and programming.
-            <br><br>As of 2021 I'm working towrds establishing myself in the industry and gaining the necessary exprience and compentencies to make an effective web developer.
+            learning other development stacks such as Python and PHP back end scripting.
+            <br><br>As of 2021 I'm working towards getting my first job in the industry and gaining the necessary exprience and compentencies to make an effective web developer.
           </p>
             <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
           
