2 new projects and removed 2 others

--- a/index.html
+++ b/index.html
@@ -319,18 +319,19 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>Survey Form</h1>
-              <a href="https://shakexsempe.github.io/Survey-Form/" target="_blank">
-                <h2>FreeCodeCamp Responsive Web Design Project #2</h2>
-                <p>A short survey form.</p>
+              <h1>Thato Technical Drawings</h1>
+              <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank">
+                <h2>Technical Drawings Lecturer Website</h2>
+                <p>Small business website for a highschool technical drawings teacher</p>
               </a>
               <ul class="tech-list">
                 <li>HTML</li>
-                <li>CSS</li>
+                <li>Sass</li>
+                <li>Javascript</li>
               </ul>
             </div>
             <div class="project-img">
-              <img src="img/survey.bmp" alt="img" />
+              <img src="img/Optimized-techthat.png" alt="img" />
             </div>
           </div>
 
@@ -410,6 +411,25 @@
           </div>
 
           <div class="project-item">
+            <div class="project-tile">
+              <h1>Munch Up&trade;</h1>
+              <a href="https://shakexsempe.github.io/sidebar-munch-up/" target="_blank">
+                <h2>Baked treats website</h2>
+
+                <p>Small business website for a local cake maker</p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img src="img/munch-logo.jpg" alt="img" />
+            </div>
+          </div>
+
+          <div class="project-item">
             <div class="project-tile" id="fpl">
               <h1>Animated Gradients</h1>
               <a href="https://shakexsempe.github.io/animated-gradients/" target="_blank">
@@ -424,62 +444,6 @@
             </div>
             <div class="project-img">
               <img src="img/gradients.bmp" alt="img" />
-            </div>
-          </div>
-
-
-          <div class="project-item">
-            <div class="project-tile" id="fpl">
-              <h1>Bootsrap Scrollbars</h1>
-              <a href="https://shakexsempe.github.io/bootstrap-scrollbars/" target="_blank">
-                <h2>Bootsrap tutorial</h2>
-                <p> A collection of cards each with a different bootsrap scrollbar</p>
-              </a>
-              <ul class="tech-list">
-                <li>Bootsrap 4.0.0</li>
-                <li></li>
-              </ul>
-            </div>
-            <div class="project-img">
-              <img src="img/bootstrap-scrollbars.bmp" alt="img" />
-            </div>
-          </div>
-
-          <div class="project-item">
-            <div class="project-tile" id="hamburger">
-              <h1>Hamburger Menu</h1>
-              <a href="https://shakexsempe.github.io/animated-hamburger-menu/" target="_blank">
-                <h2>HTML 5 Tutorial Project</h2>
-                <p>Landing page with an animated hamburger menu.</p>
-              </a>
-              <ul class="tech-list">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-              </ul>
-            </div>
-            <div class="project-img">
-              <img src="img/b7.bmp" alt="img" />
-            </div>
-          </div>
-
-          <div class="project-item">
-            <div class="project-tile">
-              <h1>Sliding Navigation</h1>
-              <a href="https://shakexsempe.github.io/sliding-hover-navigation/" target="_blank">
-                <h2>HTML 5 Tutorial</h2>
-                <p>
-                  Navigation bar with sliding focus bar on links
-                </p>
-              </a>
-              <ul class="tech-list">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-              </ul>
-            </div>
-            <div class="project-img">
-              <img src="img/slideNav.bmp" alt="img" />
             </div>
           </div>
 
