new thato project img and spell check on about and skills section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div class="skills-top">
           <p>
             I'm a self taught Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
-            My skill set is built up from various online platforms such as Coursera, W3schools,
-            Traversey Media, Udemy and most notably Free-Code-Camp where I obtained a certificate in Responsive Web Design. 
+            My skill set is built up from various online platforms, most notably Free-Code-Camp where I obtained a certificate in Responsive Web Design. 
             <br><br>View my full skill set in the dropdown section below.
           </p>
         </div>
@@ -322,7 +321,7 @@
               <h1>Thato Technical Drawings</h1>
               <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank">
                 <h2>Technical Drawings Lecturer Website</h2>
-                <p>Small business website for a highschool technical drawings teacher</p>
+                <p>Small business Responsive website for a highschool technical drawings teacher</p>
               </a>
               <ul class="tech-list">
                 <li>HTML</li>
@@ -331,7 +330,7 @@
               </ul>
             </div>
             <div class="project-img">
-              <img src="img/Optimized-techthat.png" alt="img" />
+              <img src="img/thato.bmp" alt="img" />
             </div>
           </div>
 
@@ -549,17 +548,17 @@
           <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
             International School of South Africa. <br><br>
-            Before becoming a Front End Web Developer, I was a Customer Care agent at the Compensation Fund
-            (Department of Labour).
+            I was a Customer Care agent at the Compensation Fund
+            (Department of Labour) before 
             I started learning to code in 2019 having previously enrolled in an Introduction of IT Fundamentals course
-            via Coursera and then most recently <a
+            via Coursera before enrolling on <a
             href="https://www.freecodecamp.org/boitumelo-sempe"
             target="_blank" class="fcc-link">FreeCodeCamp</a>. 
             <br><br>
-            I'm currently studying towards MERN stack competancy as I've taken to javascript as my foundational programming language. 
-            <br><br> As I progress in JS and development as a whole I then intend on 
+            I'm currently studying towards MERN stack competancy as I've taken to Javascript as my foundational programming language. 
+            <br><br>As I progress and with experince, I then intend on 
             learning other development stacks such as Python and PHP back end scripting.
-            <br><br>As of 2021 I'm working towards getting my first job in the industry and gaining the necessary exprience and compentencies to make an effective web developer.
+            <br><br>As of 2021 I'm working towards getting my first job in the industry and gaining the necessary compentencies to make an effective web developer.
           </p>
             <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
           
