new footer icons and styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <li><a href="#projects" data-after="Projects" class="scroll-link">Projects</a></li>
               <li><a href="#about" data-after="About" class="scroll-link">About</a></li>
               <li><a href="#contact" data-after="Contact"class="scroll-link">Contact</a></li>
+              <li><a href="#footer" data-after="Footer"class="scroll-link">Footer</a></li>
             </ul>
           </div>
           </div>
@@ -633,40 +634,28 @@
             <a
               href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/"
               target="_blank"
-              ><img
-                src="/icons/icons8-linkedin-64.png"
-                alt="img"
-                srcset="https://img.icons8.com/nolan/64/linkedin.png"
-              />
+              >
+              <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
           <div class="social-item">
             <a href="https://github.com/ShakexSempe" target="_blank"
-              ><img
-                src="./icons/icons8-git-64.png"
-                alt="img"
-                srcset="https://img.icons8.com/nolan/50/github.png"
-              />
+              >
+              <i class="fab fa-github"></i>
             </a>
           </div>
           <div class="social-item">
             <a
               href="https://www.freecodecamp.org/boitumelo-sempe"
               target="_blank"
-              ><img
-                id="fcc"
-                src="icons/icons8-fire-64.png"
-                alt="img"
-                srcset="" />
+              >
+              <i class="fab fa-free-code-camp"></i>
             </a>
           </div>
           <div class="social-item">
             <a href="https://twitter.com/Shake_x11" target="_blank"
-              ><img
-                src="./icons/icons8-twitter-64.png"
-                alt="img"
-                srcset="https://img.icons8.com/nolan/64/twitter.png"
-              />
+              >
+              <i class="fab fa-twitter"></i>
             </a>
           </div>
         </div>
