dynamic footer date

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
           </div>
         </div>
         <div id="bs21">
-          <p>Boitumelo Sempe. 2021</p>
+          <p>copyright&copy; Boitumelo Sempe: <span id="date"></span> </p>
         </div>
       </div>
       
