--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="skills-top">
           <p>
             Boitumelo "Shakex" Sempe is a self taught Front End Developer with a keen interest in Responsive Web Design and User Interface.<br>
-            Shakex's skill set is built up from various online platforms, most notably Free-Code-Camp where he obtained a certificate in Responsive Web Design. 
+            His skill set is built up from various online platforms, most notably Free-Code-Camp where he obtained a certificate in Responsive Web Design. 
             <br><br>View his full skill set in the dropdown section below.
           </p>
         </div>
@@ -546,21 +546,27 @@
             <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
           </div>
           <h2>Front End Web Developer</h2>
-          <p id="content-1" class="custom-scrollbar-js" >
-            I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
-            International School of South Africa. <br><br>
-            I was a Customer Care agent at the Compensation Fund
-            (Department of Labour) before 
-            I started learning to code in 2019 having previously enrolled in an Introduction of IT Fundamentals course
-            via Coursera before enrolling on <a
-            href="https://www.freecodecamp.org/boitumelo-sempe"
-            target="_blank" class="fcc-link">FreeCodeCamp</a>. 
-            <br><br>
-            I'm currently studying towards MERN stack competancy as I've taken to Javascript as my foundational programming language. 
-            <br><br>As I progress and with experince, I then intend on 
-            learning other development stacks such as Python and PHP back end scripting.
-            <br><br>As of 2021 I'm working towards getting my first job in the industry and gaining the necessary compentencies to make an effective web developer.
-          </p>
+          <article id="content-1" class="custom-scrollbar-js">
+            <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
+              his A-levels from the
+              International School of South Africa.</p>
+
+            <p>Boitumelo is looking first job in the industry where he can gain the necessary proffessional
+              compentencies to make an effective web developer that can conntribute and add value to web based products
+              and services.
+            </p>
+
+            <p>A former Customer Care agent at the Compensation Fund (Department of Labour), he started coding in 2019
+              and enrolled in the online coding bootcamp
+              <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
+              where he completed a certificate in Responsive Web Design.
+            </p>
+
+
+            <p>Boitumelo is currently studying towards MERN stack competancy and committed to learning other development
+              stacks such as Python and PHP back end scripting.
+            </p>
+          </article>
             <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
           
         </div>
