commented out react random quote machine project item

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             </div>
           </div>
 
-          <div class="project-item">
+          <!-- <div class="project-item">
             <div class="project-tile">
               <h1>React Random Quote Machine</h1>
               <a href="https://unruffled-darwin-7a9a4f.netlify.app/" target="_blank">
@@ -525,7 +525,7 @@
             <div class="project-img">
               <img src="img/react2.bmp" alt="img" />
             </div>
-          </div>
+          </div> -->
 
         </div>
 
