--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
               International School of South Africa.</p>
 
             <p>Boitumelo is looking first job in the industry where he can gain the necessary proffessional
-              compentencies to make an effective web developer that can conntribute and add value to web based products
+              compentencies to make an effective web developer that can add value to web based products
               and services.
             </p>
 
@@ -563,7 +563,7 @@
             </p>
 
 
-            <p>Boitumelo is currently studying towards MERN stack competancy and committed to learning other development
+            <p>Boitumelo is currently studying towards MERN stack competency and is committed to learning other development
               stacks such as Python and PHP back end scripting.
             </p>
           </article>
