about section spell check

--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
               his A-levels from the
               International School of South Africa.</p>
 
-            <p>Boitumelo is looking first job in the industry where he can gain the necessary proffessional
-              compentencies to make an effective web developer that can conntribute and add value to web based products
+            <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
+              compentencies to make an effective web developer that can add value to web based products
               and services.
             </p>
 
@@ -563,7 +563,7 @@
             </p>
 
 
-            <p>Boitumelo is currently studying towards MERN stack competancy and committed to learning other development
+            <p>Boitumelo is currently studying towards MERN stack competency and committed to learning other development
               stacks such as Python and PHP back end scripting.
             </p>
           </article>
