about section spell check

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
               his A-levels from the
               International School of South Africa.</p>
 
-            <p>Boitumelo is looking first job in the industry where he can gain the necessary proffessional
+            <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
               compentencies to make an effective web developer that can add value to web based products
               and services.
             </p>
