--- a/index.html
+++ b/index.html
@@ -635,6 +635,20 @@
           <h1><span>S</span>hakex <span>S</span>empe</h1>
           <h2>Web Development</h2>
         </div>
+        
+        <section class="cube-container">
+          <div class="scene">
+            <div class="cube">
+              <div class="front"></div>
+              <div class="back"></div>
+              <div class="left"></div>
+              <div class="right"></div>
+              <div class="top"></div>
+              <div class="bottom"></div>
+            </div>
+        </section>
+
+
         <div class="social-icon">
           <div class="social-item">
             <a
